--- a/lab4_Segmentation/Segmentation.ipynb
+++ b/lab4_Segmentation/Segmentation.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 5 [48/339] {'loss': '0.362'}}\r"
+      "Epoch 4 [66/339] {'loss': '0.353'}}\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/stud/f/fremar16/miniconda3/envs/DL-Labs/lib/python3.9/site-packages/pytorch_lightning/trainer/trainer.py:895: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
+      "  rank_zero_warn('Detected KeyboardInterrupt, attempting graceful shutdown...')\n",
+      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7fc361e5f280>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/stud/f/fremar16/miniconda3/envs/DL-Labs/lib/python3.9/site-packages/torch/utils/data/dataloader.py\", line 1328, in __del__\n",
+      "    self._shutdown_workers()\n",
+      "  File \"/home/stud/f/fremar16/miniconda3/envs/DL-Labs/lib/python3.9/site-packages/torch/utils/data/dataloader.py\", line 1301, in _shutdown_workers\n",
+      "    w.join(timeout=_utils.MP_STATUS_CHECK_INTERVAL)\n",
+      "  File \"/home/stud/f/fremar16/miniconda3/envs/DL-Labs/lib/python3.9/multiprocessing/process.py\", line 149, in join\n",
+      "    res = self._popen.wait(timeout)\n",
+      "  File \"/home/stud/f/fremar16/miniconda3/envs/DL-Labs/lib/python3.9/multiprocessing/popen_fork.py\", line 40, in wait\n",
+      "    if not wait([self.sentinel], timeout):\n",
+      "  File \"/home/stud/f/fremar16/miniconda3/envs/DL-Labs/lib/python3.9/multiprocessing/connection.py\", line 936, in wait\n",
+      "    ready = selector.select(timeout)\n",
+      "  File \"/home/stud/f/fremar16/miniconda3/envs/DL-Labs/lib/python3.9/selectors.py\", line 416, in select\n",
+      "    fd_event_list = self._selector.poll(timeout)\n",
+      "KeyboardInterrupt: \n"
      ]
     }
    ],
